# Project-Chimera-The-Agentic-Infrastructure-Challenge-

./: .coderabbit.yaml  .dockerignore  Dockerfile  Makefile  README.md  pyproject.toml  rules.md
.cursor/: rules
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md
docs/adr/: adr-001-db-choice.md  adr-002-orchestration-pattern.md  adr-003-security-strategy.md
ide-chat-history/: 001_initial_exploration.md  002_debugging_attempts.md  003_multi_step_orchestration.md
research/: architecture_strategy.md  domain_analysis.md  mcp_connection_log.md  tooling_strategy.md
skills/: README.md  skills_interface.py  trend_fetcher.py
skills/skill-download-video/: SKILL.md  schema.json
skills/skill-reconcile-ledger/: SKILL.md  schema.json
skills/skill-transcribe-audio/: SKILL.md  schema.json
specs/: _meta.md  acceptance_criteria.md  frontend.md  functional.md  openclaw_integration.md  rules_intent.md  security.md  technical.md
specs/001-trend-ingestion/: spec.md
specs/001-trend-ingestion/checklists/: requirements.md
specs/002-trend-ingestion/: data-model.md  plan.md  quickstart.md  research.md  spec.md
specs/002-trend-ingestion/contracts/: ingestion-openapi.yaml
src/services/trend_ingest/: __init__.py  db.py  models.py  tasks.py
src/services/trend_ingest/api/: main.py
src/services/trend_ingest/services/: enrichment.py  ingest.py
tests/: README.md  test_ingest.py  test_placeholder.py  test_skills_interface.py  test_trend_fetcher.py  test_trend_ingest_scaffold.py
