[project]
name = "project-chimera"
version = "0.1.0"
description = "Autonomous Influencer Factory - Project Chimera"
authors = [{ name = "Rediet" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "requests>=2.31",
    "redis>=5.0",
    "weaviate-client>=3.25",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "langchain>=0.1",
    "coinbase-agentkit>=0.3",
    "cdp-sdk>=0.1",
    "python-dotenv>=1.0"
]

[tool.uv.dependencies]
pytest = "^8.0"
